Problem 6 completed + a lot of reduction for replicated code
