# cryptopals/solvers.py
@@ -1,78 +1,90 @@
 from cryptopals.conversions import (
     hex_to_ascii,
 )
-from enchant import (
-        Dict,
+from functools import (
+        partial,
 )
 
-dictionary = Dict('en_US')
 
-
-def score_string(string):
+def score_letters(string):
     '''
-    Score a string for english words
+    Score a string for english letters
 
     :param string: input string to score
-    :return: an arbitrary score for number of english words
+    :return: an arbitrary score for number of english letters
     '''
 
-    words = []
-
-    # Remove words with invalid characters before check
-    for word in string.split(' '):
-        for c in word:
-            if c < 'A' or (c > 'Z' and c < 'a') or c > 'z':
-                break
-        else:
-            if word:
-                words.append(word)
+    LETTER_FREQUENCY = {
+            # Frequency for space is arbitrary, but slightly higher than 'E'
+            b' ': 13.00,
+            b'E': 12.49,
+            b'T': 9.28,
+            b'A': 8.04,
+            b'O': 7.64,
+            b'I': 7.57,
+            b'N': 7.23,
+            b'S': 6.51,
+            b'R': 6.28,
+            b'H': 5.05,
+            b'L': 4.07,
+            b'D': 3.82,
+            b'C': 3.34,
+            b'U': 2.73,
+            b'M': 2.51,
+            b'F': 2.40,
+            b'P': 2.14,
+            b'G': 1.87,
+            b'W': 1.68,
+            b'Y': 1.66,
+            b'B': 1.48,
+            b'V': 1.05,
+            b'K': 0.54,
+            b'X': 0.23,
+            b'J': 0.16,
+            b'Q': 0.12,
+            b'Z': 0.09,
+    }
 
     return sum(map(
-        lambda x: 1 if dictionary.check(x) else 0,
-        words,
+        lambda c: LETTER_FREQUENCY.get(c.upper(), 0),
+        string,
     ))
 
 
-def find_best_plaintext(candidates):
+def find_best_plaintext(
+        candidates,
+):
     '''
     Given a list of candidate plaintext strings, find the most likely solution
 
     :param candidates: a list of candidate plaintext strings
+    :param letters_only: only validate letters
     :return: the most likely solution
     '''
 
-    # Find score for all plaintexts (might need multiple later)
-    scored_candidate = (
-            (score_string(candidate), candidate) for candidate in candidates
+    # Return the most highly scored
+    return max(
+            candidates,
+            key=lambda x: score_letters(x),
     )
 
-    # Return the most highly scored
-    return sorted(
-            scored_candidate,
-            reverse=True,
-    )[0][1]
 
-
-def solve_single_byte_xor(hex_ciphertext):
+def solve_single_byte_xor(ciphertext):
     '''
     Solve a single-byte XOR cipher
 
-    :param hex_ciphertext: hex string of ciphertext:
+    :param ciphertext: ciphertext to decrypt:
     :return: most likely result
     '''
 
-    # Decode hex to byte representation
-    initial_str = hex_to_ascii(
-            hex_ciphertext,
-            ret_bytes=True,
-    )
     # Generate a list of all possible plaintexts
-    candidates = map(
-            lambda x: "".join([chr(char ^ x) for char in initial_str]),
+    return find_best_plaintext(map(
+            lambda x: list(map(
+                lambda c: (c ^ x).to_bytes(1, 'little'),
+                ciphertext,
+            )),
             range(256),
-    )
-
-    return find_best_plaintext(candidates)
+    ))
 
 
 def detect_single_byte_xor(list_of_ciphertexts):
@@ -84,9 +96,140 @@ def detect_single_byte_xor(list_of_ciphertexts):
     '''
 
     # Find the single_byte_xor solution for each string
-    candidates = map(
+    return find_best_plaintext(map(
             solve_single_byte_xor,
-            list_of_ciphertexts,
+            map(
+                partial(
+                    hex_to_ascii,
+                    ret_bytes=True,
+                ),
+                list_of_ciphertexts,
+            ),
+    ))
+
+
+def hamming_distance(
+        first_string,
+        second_string,
+):
+    '''
+    Find the hamming distance of two strings
+
+    :param first_string: the first string for hamming distance
+    :param second_string: the second string for hamming distance
+    :return: the hamming distance of the two strings
+    '''
+
+    return sum(map(
+        lambda a, b: bin(a ^ b).count('1'),
+        first_string,
+        second_string,
+    ))
+
+
+def normalized_hamming_distance(
+        ciphertext,
+        key_size,
+):
+    '''
+    Calculate the average normalized hamming distance of a ciphertext for a
+    given key size
+
+    :param ciphertext: the ciphertext to calculate
+    :param key_size: the key size to test
+    :return: the normalized hamming distance for the given key size
+    '''
+
+    # Calculate the average hamming distance of all adjacent blocks for given
+    # key size
+    return sum(map(
+        lambda x: hamming_distance(
+            ciphertext[:x * key_size],
+            ciphertext[x * key_size: (x+1) * key_size],
+        ) / key_size,
+        range(1, int(len(ciphertext) / key_size)),
+    )) / (int(len(ciphertext) / key_size) - 1)
+
+
+def find_key_size(
+        ciphertext,
+        MIN_KEY_SIZE=2,
+        MAX_KEY_SIZE=40,
+):
+    '''
+    Find the most likely key size for a repeated key XOR
+
+    :param ciphertext: the ciphertext to break
+    :return: the most likely key size used to encrypt that ciphertext
+    '''
+
+    return min(
+            range(MIN_KEY_SIZE, MAX_KEY_SIZE + 1),
+            key=lambda x: normalized_hamming_distance(
+                ciphertext,
+                x,
+            ),
     )
 
-    return find_best_plaintext(candidates)
+
+def split_by_key_size(
+        ciphertext,
+        key_size,
+):
+    '''
+    Split a string into chunks based on key size
+
+    :param ciphertext: The ciphertext to chop up
+    :param key_size: the number of chunks to chop ciphertext into
+    :return: a list of chunks representing ciphertext
+    '''
+
+    return list(map(
+        lambda x: ciphertext[x::key_size],
+        range(key_size),
+    ))
+
+
+def combine_by_key_size(
+        chunks,
+):
+    '''
+    Recombine chunks into plaintext based on key size
+
+    :param chunks: The chunks to recombine
+    :return: The estimated plaintext
+    '''
+
+    return map(
+            lambda x: b''.join(x),
+            zip(*chunks),
+    )
+
+
+def solve_repeated_key_xor(ciphertext):
+    '''
+    Find the plaintext of a repeated key XOR ciphertext
+
+    :param ciphertext: the ciphertext to break
+    :return: the corresponding plaintext
+    '''
+
+    # Determine the key size of the repeating key
+    key_size = find_key_size(ciphertext)
+
+    # Split up the ciphertext by key_size
+    chunks = split_by_key_size(
+            ciphertext,
+            key_size,
+    )
+
+    # solve single byte xor for each chunk
+    best_chunks = map(
+            solve_single_byte_xor,
+            chunks,
+    )
+
+    # Recombine best chunks
+    return combine_by_key_size(
+            best_chunks,
+    )
